--- a/test.html
+++ b/test.html
@@ -1,21 +1,191 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>addEventListener Fix</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AR Real-time Segmentation (WebGLTexture Direct Input)</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgl"></script>
+  <style>
+    body { margin: 0; overflow: hidden; }
+    #maskCanvas {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      z-index: 10;
+      pointer-events: none;
+      transform: rotate(180deg) scaleX(-1);
+    }
+    #info, #glInfo {
+      position: absolute;
+      font-family: monospace;
+      font-size: 12px;
+      max-width: 90vw;
+      white-space: pre-wrap;
+      padding: 6px;
+      background: rgba(0,0,0,0.6);
+      color: white;
+      z-index: 20;
+    }
+    #info { bottom: 10px; left: 10px; }
+    #glInfo { top: 10px; right: 10px; color: lime; }
+    #startBtn {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 30;
+      padding: 10px;
+      background: rgba(0,0,0,0.7);
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-  <button id="startBtn">Click me</button>
+  <button id="startBtn">Start AR Segmentation</button>
+  <canvas id="maskCanvas"></canvas>
+  <div id="info">Status: idle</div>
+  <div id="glInfo"></div>
+
   <script>
+    let model, gl, session, glBinding;
+    const maskCanvas = document.getElementById('maskCanvas');
+    const maskCtx = maskCanvas.getContext('2d');
+    const tempCanvas = document.createElement('canvas');
+    tempCanvas.width = 224;
+    tempCanvas.height = 224;
+    const tempCtx = tempCanvas.getContext('2d');
+    const processingLock = { busy: false };
+    let fpsHistory = [];
+
+    function log(msg) {
+      console.error(msg);
+      document.getElementById('info').textContent = "Status:\n" + msg;
+    }
+
+    function logGLInfo(msg) {
+      document.getElementById('glInfo').textContent = msg;
+    }
+
+    async function loadModel(canvas) {
+      try {
+        gl = canvas.getContext('webgl', { xrCompatible: true });
+        const backend = new tf.MathBackendWebGL(gl);
+        tf.registerBackend('custom-webgl', () => backend);
+        await tf.setBackend('custom-webgl');
+        await tf.ready();
+        log('Using custom WebGL backend');
+        model = await tf.loadLayersModel('jsModel/model.json');
+        log("Model loaded");
+      } catch (e) {
+        log('Load error: ' + e.message);
+        throw e;
+      }
+    }
+
+    async function startAR() {
+      try {
+        log("Starting AR...");
+
+        const renderCanvas = document.createElement('canvas');
+        renderCanvas.width = window.innerWidth;
+        renderCanvas.height = window.innerHeight;
+        document.body.appendChild(renderCanvas);
+
+        await loadModel(renderCanvas);
+
+        session = await navigator.xr.requestSession('immersive-ar', {
+          requiredFeatures: ['camera-access', 'dom-overlay'],
+          domOverlay: { root: document.body }
+        });
+
+        session.updateRenderState({ baseLayer: new XRWebGLLayer(session, gl) });
+        const referenceSpace = await session.requestReferenceSpace('local');
+        glBinding = new XRWebGLBinding(session, gl);
+
+        let lastFrameTime = performance.now();
+
+        function onFrame(time, frame) {
+          session.requestAnimationFrame(onFrame);
+          if (processingLock.busy) return;
+
+          try {
+            const pose = frame.getViewerPose(referenceSpace);
+            if (!pose) return;
+
+            const view = pose.views[0];
+            const tex = glBinding.getCameraImage(view.camera);
+            const texWidth = view.camera.width;
+            const texHeight = view.camera.height;
+
+            if (!tex) {
+              logGLInfo("Camera texture is null");
+              return;
+            }
+
+            processingLock.busy = true;
+
+            const webglData = {
+              texture: tex,
+              width: texWidth,
+              height: texHeight,
+              channels: 'RGB'
+            };
+
+            let rawTensor;
+            try {
+              rawTensor = tf.tensor(webglData, [texHeight, texWidth, 3], 'float32');
+            } catch (err) {
+              log("TF Error: " + err.message);
+              processingLock.busy = false;
+              return;
+            }
+
+            const resized = tf.image.resizeBilinear(rawTensor, [224, 224])
+              .div(255).expandDims();
+            const prediction = model.predict(resized).squeeze();
+
+            prediction.data().then(() => {
+              tf.browser.toPixels(tf.sub(1, prediction), tempCanvas).then(() => {
+                maskCanvas.width = window.innerWidth;
+                maskCanvas.height = window.innerHeight;
+                maskCtx.clearRect(0, 0, maskCanvas.width, maskCanvas.height);
+                maskCtx.drawImage(tempCanvas, 0, 0, maskCanvas.width, maskCanvas.height);
+
+                tf.dispose([rawTensor, resized, prediction]);
+                processingLock.busy = false;
+
+                const now = performance.now();
+                const frameTime = now - lastFrameTime;
+                lastFrameTime = now;
+                fpsHistory.push(1000 / frameTime);
+                if (fpsHistory.length > 30) fpsHistory.shift();
+                const avgFps = fpsHistory.reduce((a, b) => a + b, 0) / fpsHistory.length;
+                log(`FPS: ${avgFps.toFixed(1)}`);
+              });
+            });
+          } catch (err) {
+            log("Frame error: " + err.message);
+            processingLock.busy = false;
+          }
+        }
+
+        session.requestAnimationFrame(onFrame);
+        document.getElementById('startBtn').style.display = 'none';
+      } catch (e) {
+        log('Unexpected error: ' + e.message);
+      }
+    }
+
     window.addEventListener('DOMContentLoaded', () => {
       const btn = document.getElementById('startBtn');
-      console.log("Got button:", btn);
       if (btn && typeof btn.addEventListener === 'function') {
-        btn.addEventListener('click', () => {
-          alert('It works!');
-        });
+        btn.addEventListener('click', startAR);
       } else {
-        console.error("startBtn not found or not a button");
+        log('startBtn is invalid or not found');
       }
     });
   </script>
