--- a/test.html
+++ b/test.html
@@ -71,7 +71,7 @@
         varying vec2 v_uv;
         void main() {
           float m = texture2D(u_mask, v_uv).r;
-          gl_FragColor = vec4(1.0, 0.0, 0.0, m);
+          gl_FragColor = vec4(vec3(1.0 - m), 1.0);
         }
       `;
       const vs = gl.createShader(gl.VERTEX_SHADER);
@@ -89,9 +89,6 @@
       quadVBO = gl.createBuffer();
       gl.bindBuffer(gl.ARRAY_BUFFER, quadVBO);
       gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([-1,-1, 1,-1, -1,1, 1,1]), gl.STATIC_DRAW);
-      gl.disable(gl.DEPTH_TEST);
-      gl.enable(gl.BLEND);
-      gl.blendFunc(gl.SRC_ALPHA, gl.ONE_MINUS_SRC_ALPHA);
     }
 
     function drawMaskFromGLTexture(texture) {
@@ -125,30 +122,24 @@
 
     async function loadModel() {
       try {
-        const outputCanvas = document.createElement('canvas');
-        outputCanvas.width = window.innerWidth;
-        outputCanvas.height = window.innerHeight;
-        outputCanvas.style.position = 'fixed';
-        outputCanvas.style.top = '0';
-        outputCanvas.style.left = '0';
-        outputCanvas.style.width = '100vw';
-        outputCanvas.style.height = '100vh';
-        outputCanvas.style.zIndex = '10';
-        outputCanvas.style.pointerEvents = 'none';
-        outputCanvas.style.transform = 'rotate(180deg) scaleX(-1)';
-        outputCanvas.id = 'maskCanvas';
-        document.body.appendChild(outputCanvas);
-
-        gl = outputCanvas.getContext('webgl');
+        await tf.setBackend('webgl');
+        await tf.ready();
+        const backend = tf.backend();
+        gl = backend?.getGPGPUContext?.().gl || backend?.gpgpu?.gl || backend?.gl;
+        if (!gl) {
+          throw new Error('Failed to obtain WebGL context');
+        }
         if (typeof gl.makeXRCompatible === 'function') {
           try {
-            await gl.makeXRCompatible();
+            if (gl.canvas && typeof gl.canvas.addEventListener === 'function') {
+              await gl.makeXRCompatible();
+            } else {
+              log('Skipping XR compatibility: canvas lacks addEventListener');
+            }
           } catch (err) {
             log('XR compatibility error: ' + err.message);
           }
         }
-        await tf.setBackend('webgl', { gl });
-        await tf.ready();
         log('Using WebGL backend');
         model = await tf.loadLayersModel('jsModel/model.json');
         log("Model loaded");
@@ -164,6 +155,22 @@
 
         await loadModel();
 
+        // Use the backend canvas as the mask overlay.
+        const renderCanvas = gl.canvas;
+        if (renderCanvas instanceof HTMLCanvasElement) {
+          renderCanvas.width = window.innerWidth;
+          renderCanvas.height = window.innerHeight;
+          renderCanvas.style.position = 'fixed';
+          renderCanvas.style.top = '0';
+          renderCanvas.style.left = '0';
+          renderCanvas.style.width = '100vw';
+          renderCanvas.style.height = '100vh';
+          renderCanvas.style.zIndex = '10';
+          renderCanvas.style.pointerEvents = 'none';
+          renderCanvas.style.transform = 'rotate(180deg) scaleX(-1)';
+          renderCanvas.id = 'maskCanvas';
+          document.body.appendChild(renderCanvas);
+        }
         initMaskPipeline(gl);
 
         session = await navigator.xr.requestSession('immersive-ar', {
@@ -173,11 +180,6 @@
 
         session.updateRenderState({ baseLayer: new XRWebGLLayer(session, gl) });
         const referenceSpace = await session.requestReferenceSpace('local');
-
-        if (session.supportedFrameRates?.includes(30)) {
-          await session.updateTargetFrameRate(30);
-        }
-                
         glBinding = new XRWebGLBinding(session, gl);
 
         let lastFrameTime = performance.now();
@@ -220,17 +222,15 @@
               const inferenceTime = performance.now() - inferenceStart;
               const postStart = performance.now();
 
-                const texData = tf.backend().texData.get(prediction.dataId);
-                const maskTex = Array.isArray(texData?.texture)
-                  ? texData.texture[0]
-                  : texData?.texture;
-                if (!maskTex) {
-                  logGLInfo('Texture is null or not available (still on CPU?)');
-                } else if (maskTex instanceof WebGLTexture) {
-                  drawMaskFromGLTexture(maskTex);
-                } else {
-                  logGLInfo('Prediction texture missing or invalid');
-                }
+              const texData = tf.backend().texData.get(prediction.dataId);
+              const maskTex = Array.isArray(texData?.texture)
+                ? texData.texture[0]
+                : texData?.texture;
+              if (maskTex instanceof WebGLTexture) {
+                drawMaskFromGLTexture(maskTex);
+              } else {
+                logGLInfo('Prediction texture missing or invalid');
+              }
               const postTime = performance.now() - postStart;
 
             tf.dispose([inputTensor, prediction]);
